<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".bmiactivity"
    android:background="@color/purple"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="-10dp"
        android:layout_marginTop="-10dp"
        android:layout_marginEnd="-10dp"
        android:layout_marginBottom="-10dp"
        android:background="@color/purple_700"
        android:fontFamily="@font/alatabmi"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:text="@string/resultHeader"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/resultImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/contentLayout"
        android:layout_centerHorizontal="true"
        android:src="@drawable/fine_result"
        android:layout_marginHorizontal="150dp"
        />

    <RelativeLayout
        android:id="@+id/contentLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:background="@drawable/card_back"
        android:layout_centerInParent="true"
        >

        <TextView
            android:id="@+id/bmiDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alatabmi"
            android:textSize="50sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/bmiDisplay"
            android:layout_centerHorizontal="true"
            />

        <TextView
            android:id="@+id/genderDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genderDisplay"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/alatabmi"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            android:layout_below="@id/bmiDisplay"
            />

        <TextView
            android:id="@+id/categoryBMI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/categoryBMI"
            android:layout_marginTop="15dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/genderDisplay"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:fontFamily="@font/alatabmi"
            android:textStyle="bold"
            />

    </RelativeLayout>

    <android.widget.Button
        android:id="@+id/reCalculateBMI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/contentLayout"
        android:layout_marginTop="50dp"
        android:textSize="15sp"
        android:text="@string/reCalculateBMI"
        android:layout_marginHorizontal="20dp"
        android:fontFamily="@font/alatabmi"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@drawable/button_back"
        />

</RelativeLayout>