<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/purple"
    >

    <TextView
        android:id="@+id/appTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/appTitle"
        android:textSize="16sp"
        android:paddingVertical="10dp"
        android:paddingHorizontal="20dp"
        android:textColor="@color/white"
        android:background="@color/purple_700"
        android:fontFamily="@font/alatabmi"
        android:textStyle="bold"
        android:textAlignment="center"
        />

    <RelativeLayout
        android:id="@+id/centerHorizontalLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        />

    <RelativeLayout
        android:id="@+id/centerVerticalLine"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        />

    <RelativeLayout
        android:id="@+id/male"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_toStartOf="@id/centerVerticalLine"
        android:background="@drawable/male_female_normal"
        android:layout_above="@id/heightLayout"
        android:layout_marginBottom="35dp"
        android:layout_marginHorizontal="20dp"
        >

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_above="@id/textMale"
            android:layout_centerInParent="true"
            android:layout_marginBottom="20dp"
            android:src="@drawable/male_ico"
            />

        <TextView
            android:id="@+id/textMale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/alatabmi"
            android:text="@string/textMale"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/female"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_toEndOf="@id/centerVerticalLine"
        android:background="@drawable/male_female_normal"
        android:layout_above="@id/heightLayout"
        android:layout_marginBottom="35dp"
        android:layout_marginHorizontal="20dp"
        >

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_above="@id/textFemale"
            android:layout_marginBottom="20dp"
            android:src="@drawable/female_ico"
            android:layout_centerInParent="true"
            />

        <TextView
            android:id="@+id/textFemale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alatabmi"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:text="@string/textFemale"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:textAlignment="center"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/weight"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_toStartOf="@id/centerVerticalLine"
        android:layout_below="@id/heightLayout"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="85dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/card_back"
        >

        <TextView
            android:id="@+id/textWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/alatabmi"
            android:text="@string/textWeight"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/currentWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/alatabmi"
            android:text="@string/currentWeight"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold"
            />

        <ImageView
            android:id="@+id/increaseWeight"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/plus_minus"
            android:src="@drawable/increase"
            />

        <ImageView
            android:id="@+id/decreaseWeight"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/plus_minus"
            android:src="@drawable/decrease"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/age"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_toEndOf="@id/centerVerticalLine"
        android:layout_below="@id/heightLayout"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="85dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/card_back"
        >

        <TextView
            android:id="@+id/textAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/alatabmi"
            android:text="@string/textAge"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/currentAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/alatabmi"
            android:text="@string/currentAge"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold"
            />

        <ImageView
            android:id="@+id/increaseAge"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/plus_minus"
            android:src="@drawable/increase"
            />

        <ImageView
            android:id="@+id/decreaseAge"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/plus_minus"
            android:src="@drawable/decrease"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/heightLayout"
        android:layout_width="340dp"
        android:layout_height="150dp"
        android:layout_above="@id/centerHorizontalLine"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="25dp"
        android:layout_marginBottom="-50dp"
        android:background="@drawable/card_back">

        <TextView
            android:id="@+id/textHeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/alatabmi"
            android:text="@string/textHeight"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/currentHeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginBottom="50dp"
            android:fontFamily="@font/alatabmi"
            android:text="@string/currentHeight"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/measureForHeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@id/currentHeight"
            android:fontFamily="@font/alatabmi"
            android:text="@string/measureForHeight"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <SeekBar
            android:id="@+id/seekbarForHeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="20dp"
            android:progressTint="@color/darkred"
            android:thumbTint="@color/white" />
    </RelativeLayout>

<android.widget.Button
    android:id="@+id/calculateBMI"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:textSize="15sp"
    android:text="@string/calculateBMI"
    android:layout_marginBottom="15dp"
    android:layout_marginHorizontal="20dp"
    android:fontFamily="@font/alatabmi"
    android:textStyle="bold"
    android:textColor="@color/white"
    android:background="@drawable/button_back"
    />

</RelativeLayout>